Uploaded image for project: 'Apache HAWQ'
  1. Apache HAWQ
  2. HAWQ-1239

Fail to call pg_rangercheck_batch() when when "rte->rtekind != RTE_RELATION" or "requiredPerms == 0"

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 2.1.0.0-incubating
    • Security
    • None

    Description

      In ExecCheckRTPermsWithRanger(), it should continue but not return when "rte->rtekind != RTE_RELATION" or "requiredPerms == 0".

          if (rte->rtekind != RTE_RELATION)
            return;
          requiredPerms = rte->requiredPerms;
          if (requiredPerms == 0)
            return;
      

      Attachments

        Issue Links

          Activity

            People

              wcl14 Chunling Wang
              wcl14 Chunling Wang
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: